[gd_scene load_steps=54 format=3 uid="uid://bx5lbe6i07jx"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_c6dl2"]
[ext_resource type="Texture2D" uid="uid://b0dvw85ir0wjg" path="res://Resources/Slime/slime black death.png" id="2_v6upn"]
[ext_resource type="Texture2D" uid="uid://wc2bdq00j35v" path="res://Resources/Slime/slime black hit.png" id="3_fhll7"]
[ext_resource type="Texture2D" uid="uid://coq5uixy8cyf2" path="res://Resources/Slime/slime black.png" id="4_dtmac"]
[ext_resource type="Texture2D" uid="uid://cjp62nevwkfej" path="res://Resources/Slime/slime black jump.png" id="5_8arv0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_neb2h"]
atlas = ExtResource("2_v6upn")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgcsh"]
atlas = ExtResource("2_v6upn")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtwuy"]
atlas = ExtResource("2_v6upn")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kh3w"]
atlas = ExtResource("2_v6upn")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxs4g"]
atlas = ExtResource("2_v6upn")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjgq4"]
atlas = ExtResource("2_v6upn")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa8ic"]
atlas = ExtResource("2_v6upn")
region = Rect2(0, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_lciw1"]
atlas = ExtResource("3_fhll7")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_er1v4"]
atlas = ExtResource("3_fhll7")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu7m1"]
atlas = ExtResource("3_fhll7")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wfcd"]
atlas = ExtResource("3_fhll7")
region = Rect2(3840, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhby2"]
atlas = ExtResource("3_fhll7")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8n8a"]
atlas = ExtResource("3_fhll7")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_iady4"]
atlas = ExtResource("3_fhll7")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_b83nt"]
atlas = ExtResource("3_fhll7")
region = Rect2(3840, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeym"]
atlas = ExtResource("3_fhll7")
region = Rect2(0, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg0w4"]
atlas = ExtResource("3_fhll7")
region = Rect2(1280, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpyha"]
atlas = ExtResource("3_fhll7")
region = Rect2(2560, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu2ni"]
atlas = ExtResource("4_dtmac")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vjwp"]
atlas = ExtResource("4_dtmac")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlpke"]
atlas = ExtResource("4_dtmac")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_stdcp"]
atlas = ExtResource("4_dtmac")
region = Rect2(3840, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlllb"]
atlas = ExtResource("4_dtmac")
region = Rect2(3840, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_kly0i"]
atlas = ExtResource("4_dtmac")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_n01v3"]
atlas = ExtResource("4_dtmac")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfixl"]
atlas = ExtResource("4_dtmac")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu68f"]
atlas = ExtResource("4_dtmac")
region = Rect2(0, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_10t18"]
atlas = ExtResource("4_dtmac")
region = Rect2(1280, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1gsc"]
atlas = ExtResource("4_dtmac")
region = Rect2(2560, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgr3g"]
atlas = ExtResource("4_dtmac")
region = Rect2(3840, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6j7s"]
atlas = ExtResource("4_dtmac")
region = Rect2(2560, 2160, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_fifmi"]
atlas = ExtResource("4_dtmac")
region = Rect2(1280, 2160, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_glxhu"]
atlas = ExtResource("4_dtmac")
region = Rect2(0, 2160, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_p14vy"]
atlas = ExtResource("5_8arv0")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffu1p"]
atlas = ExtResource("5_8arv0")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8uo0"]
atlas = ExtResource("5_8arv0")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xe5e"]
atlas = ExtResource("5_8arv0")
region = Rect2(3840, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kawy"]
atlas = ExtResource("5_8arv0")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka6f4"]
atlas = ExtResource("5_8arv0")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1qyl"]
atlas = ExtResource("5_8arv0")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqa16"]
atlas = ExtResource("5_8arv0")
region = Rect2(3840, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrbll"]
atlas = ExtResource("5_8arv0")
region = Rect2(0, 1440, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxmcg"]
atlas = ExtResource("5_8arv0")
region = Rect2(1280, 1440, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_34f4i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neb2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgcsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtwuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kh3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxs4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjgq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa8ic")
}],
"loop": true,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lciw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er1v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu7m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wfcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhby2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8n8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iady4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b83nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg0w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpyha")
}],
"loop": true,
"name": &"Hit",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu2ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vjwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlpke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stdcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlllb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kly0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n01v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfixl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu68f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10t18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1gsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgr3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6j7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fifmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glxhu")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p14vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffu1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8uo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xe5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kawy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka6f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1qyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqa16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrbll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxmcg")
}],
"loop": true,
"name": &"Walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iaql"]
size = Vector2(26, 18.8799)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1p3kk"]
size = Vector2(32, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kg8n"]
size = Vector2(12.2375, 74.2566)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1tmgh"]
size = Vector2(34, 40)

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_c6dl2")

[node name="Animation" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.07, 0.07)
sprite_frames = SubResource("SpriteFrames_34f4i")
animation = &"Death"
frame_progress = 0.80764

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3.5)
shape = SubResource("RectangleShape2D_2iaql")

[node name="Attack_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
position = Vector2(-4, 4)
shape = SubResource("RectangleShape2D_1p3kk")

[node name="Player_Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detector"]
position = Vector2(-3, -20)
rotation = -3.14159
scale = Vector2(7.67218, -1.11062)
shape = SubResource("RectangleShape2D_7kg8n")

[node name="Hit_Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Zone"]
position = Vector2(-3, 3)
shape = SubResource("RectangleShape2D_1tmgh")

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[connection signal="body_entered" from="Attack_Area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="Player_Detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Player_Detector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="Hit_Zone" to="." method="_on_hit_zone_body_entered"]
